fixed mobile navbar transition and overflow x

--- a/client/notary_website/src/styles/globals.scss
+++ b/client/notary_website/src/styles/globals.scss
@@ -5,7 +5,7 @@ html {
   padding: 0;
   margin: 0;
  
-  
+  overflow-x: hidden; 
 }
 
 body {
@@ -15,7 +15,9 @@ body {
     // removes the black box when selecting on input tag
     :focus {
       outline: 0;
-  }
+      
+    }
+    overflow-x: hidden; 
 
 
 }
